--- a/index.html
+++ b/index.html
@@ -217,24 +217,25 @@
         <div class="carousel-item active">
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <p>"Lorem ipsum dolor sit amet consectetur adipiscing elit feugiat tellus sociosqu ornare, morbi risus urna tincidunt mus curabitur vel non massa natoque. Pretium tristique eget nulla sem condimentum ligula eu ultrices convallis, ridiculus nibh bibendum posuere consequat tempus blandit donec."</p>
-              <div class="h6 text-uppercase">Lorem Ipsum</div>
+              <p>""Sun Valley Web Solutions exceeded my expectations in every way. Their team took the time to understand my business needs and delivered a stunning, user-friendly website that has significantly boosted my online presence. Their creativity and attention to detail are unmatched. Highly recommend!"</p>
+              <div class="h6 text-uppercase">Mikey C.</div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <p>"Lorem ipsum dolor sit amet consectetur adipiscing elit feugiat tellus sociosqu ornare, morbi risus urna tincidunt mus curabitur vel non massa natoque. Pretium tristique eget nulla sem condimentum ligula eu ultrices convallis, ridiculus nibh bibendum posuere consequat tempus blandit donec."</p>
-              <div class="h6 text-uppercase">Lorem Ipsum</div>
+              <p>"I am thrilled with the website Sun Valley Web Solutions designed for us. The process was smooth, and their flexibility and responsiveness made it a pleasure to work with them. The end result is a beautiful, functional website that our customers love. Great job!"
+              </p>
+              <div class="h6 text-uppercase">Dr. Jess Chan</div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <p>"Lorem ipsum dolor sit amet consectetur adipiscing elit feugiat tellus sociosqu ornare, morbi risus urna tincidunt mus curabitur vel non massa natoque. Pretium tristique eget nulla sem condimentum ligula eu ultrices convallis, ridiculus nibh bibendum posuere consequat tempus blandit donec."</p>
-              <div class="h6 text-uppercase">Lorem Ipsum</div>
+              <p>"Working with Sun Valley Web Solutions was a fantastic experience. They transformed our outdated website into a modern, engaging platform that perfectly represents our brand. The team’s expertise and commitment to delivering results are evident in every aspect of their work. Five stars all the way!"</p>
+              <div class="h6 text-uppercase">David Wright</div>
             </div>
           </div>
         </div>
